--- a/package.json
+++ b/package.json
@@ -3,25 +3,30 @@
   "version": "0.0.0",
   "description": "A library to build subsets of a given GraphQL Schema.",
   "main": "lib/index.js",
+  "bin": "lib/cli.js",
   "scripts": {
     "test": "jest",
     "format": "prettier --write ./src/**/*",
-    "build": "tsc"
+    "build": "tsc",
+    "cli": "ts-node --transpile-only ./src/cli.ts"
   },
   "keywords": [],
   "author": "Jordan Gensler <jordangens@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "graphql": "^14.1.1"
+    "graphql": "^14.1.1",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.5",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.21",
+    "@types/yargs": "^12.0.9",
     "graphql-tag": "^2.10.1",
     "jest": "^24.0.0",
     "prettier": "^1.16.3",
     "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
     "typescript": "^3.3.1"
   }
 }
